[package]
name = "ckb-transaction-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.9", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
secp256k1 = { version = "0.24", features = ["recovery"] }
anyhow = "1.0.65"

ckb-sdk = "2.3.0"
ckb-types = "=0.105.1"
ckb-jsonrpc-types = "=0.105.1"
ckb-hash = "=0.105.1"
ckb-testtool = "0.8.0"
molecule = "0.7.2"
